core done exclude controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.servlet.context-path=/football
+server.servlet.context-path=/shopp
 server.port=8080
 # DB
-spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/football
+spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/shopponline
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:QAZwsx!@#456}
@@ -9,7 +9,7 @@ spring.datasource.password=${POSTGRES_PASSWORD:QAZwsx!@#456}
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.integration.envers.enabled=true
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=create
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
