--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 server.servlet.context-path=/shopp
 server.port=8080
 # DB
-spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/shopponline
+spring.datasource.url=jdbc:postgresql://${POSTGRES:localhost:5432}/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=${POSTGRES_USER:postgres}
 spring.datasource.password=${POSTGRES_PASSWORD:QAZwsx!@#456}
 # JPA
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.properties.hibernate.integration.envers.enabled=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # Flyway
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
-spring.flyway.baseline-on-migrate=true
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
+#spring.flyway.baseline-on-migrate=true
 # Log
 logging.level.org.hibernate.SQL=${LOG_LEVEL:info}
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=${LOG_LEVEL:info}
